--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -1,3 +1,32 @@
+// FORM
+.contactus{
+    position: relative;
+    margin-bottom: -80px;
+
+    h3{
+        z-index: -2;
+    }
+
+}
+.formulaire {
+    background-color: white;
+    z-index: 1;
+    width: 80%;
+    margin-top: -25px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid white;
+}
+  
+.boutonSend {
+    margin-left: 13px !important;
+    margin-bottom: 5px;
+    display: inline-block !important;
+}
+.form-control {
+    border: 2px solid lightgray;
+}
+
 // CENTRER LE CONTAINER
 .container__center{
     width: 85%;
