--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ a:hover {
   background-color: white;
   z-index: 1;
   width: 80%;
-  margin-top: -25px;
+  margin-top: -2px;
   margin-left: auto;
   margin-right: auto;
   border: 2px solid white;
@@ -789,6 +789,38 @@ footer .border:hover {
   width: 50px;
 }
 
+a#cRetour {
+  position: fixed;
+  right: 120px;
+  opacity: 1;
+  z-index: 99999;
+  -webkit-transition: all ease-in 0.2s;
+  -o-transition: all ease-in 0.2s;
+  transition: all ease-in 0.2s;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  text-decoration: none;
+}
+
+a#cRetour:hover {
+  -webkit-transition: all ease-in 0.2s;
+  -o-transition: all ease-in 0.2s;
+  transition: all ease-in 0.2s;
+}
+
+a#cRetour.cInvisible {
+  bottom: -35px;
+  opacity: 0;
+  -webkit-transition: all ease-in 0.5s;
+  -o-transition: all ease-in 0.5s;
+  transition: all ease-in 0.5s;
+}
+
+a#cRetour.cVisible {
+  bottom: 20px;
+  opacity: 1;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -1130,22 +1162,4 @@ template {
    */
 [hidden] {
   display: none;
-}
-
-.formulaire {
-  background-color: white;
-  position: relative;
-  top: 70px;
-  z-index: 5;
-  width: 80%;
-  padding-bottom: 20px;
-  margin: auto;
-  border: 2px solid white;
-}
-
-.boutonSend {
-  margin-left: 1.4%;
-}
-.form-control {
-  border: 2px solid lightgray;
 }
