--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -359,6 +359,73 @@ section {
   text-transform: uppercase;
 }
 
+.bp-reseaux {
+  z-index: 2000;
+  position: fixed;
+  bottom: 15vh;
+  left: -130px;
+}
+
+.bp-reseaux a {
+  color: unset;
+  text-decoration: none;
+}
+
+.bp-res {
+  border-radius: 0px 25px 25px 0;
+  height: 45px;
+  width: 175px;
+  margin-bottom: 10px;
+  position: relative;
+  -webkit-transition: -webkit-transform .1s;
+  transition: -webkit-transform .1s;
+  -o-transition: transform .1s;
+  transition: transform .1s;
+  transition: transform .1s, -webkit-transform .1s;
+}
+
+.bp-res p {
+  margin-left: 10px;
+  line-height: 3em;
+  color: white;
+  width: 120px;
+  text-align: center;
+}
+
+.bp-res:hover {
+  -webkit-transform: translateX(130px);
+      -ms-transform: translateX(130px);
+          transform: translateX(130px);
+}
+
+.cercle {
+  background-color: white;
+  padding: 5px;
+  border-radius: 50%;
+  height: 2em;
+  width: 2em;
+  text-align: center;
+  position: absolute;
+  right: 7px;
+  top: 6px;
+}
+
+.twitter {
+  background-color: #0EA4FC;
+}
+
+.facebook {
+  background-color: #3E5F94;
+}
+
+.drible {
+  background-color: #F04888;
+}
+
+.googleplus {
+  background-color: #DD4831;
+}
+
 header .title {
   font-size: 55px;
   font-weight: 900;
