--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -80,6 +80,11 @@ header{
             background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
         }
     }
+    .nav-item{
+        *{
+            font-size:15px !important;  
+        }     
+    }
     .d-block{
         min-height: 500px;
         object-fit: cover;
@@ -103,7 +108,7 @@ header{
         color: white;
     }
     .navbar-nav{
-        padding-left:15px;
+        padding-left:4vw;
     }
     .btn-black{
         background-color:black;
@@ -160,7 +165,7 @@ header{
         
         width:100%;
         top:0%;
-        padding:25px !important;
+        padding:25px 3vw !important;
         z-index: 2;
         
         color:white;
