--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -34,6 +34,13 @@ $h2small:35px;
         }
     }
 }
+@media screen and (max-width:730px){
+    .cookie-request{
+        width:100%;
+        margin-top:50px;
+        border:none;
+    }
+}
 @media screen and (max-width:991px) {
     header{
         .title{
