--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -359,19 +359,19 @@ main .btn-plus {
   text-transform: uppercase;
 }
 
-main .bp-reseaux {
+.bp-reseaux {
   z-index: 2000;
   position: fixed;
   bottom: 15vh;
   left: -130px;
 }
 
-main .bp-reseaux a {
+.bp-reseaux a {
   color: unset;
   text-decoration: none;
 }
 
-main .bp-res {
+.bp-res {
   border-radius: 0px 25px 25px 0;
   height: 45px;
   width: 175px;
@@ -384,7 +384,7 @@ main .bp-res {
   transition: transform .1s, -webkit-transform .1s;
 }
 
-main .bp-res p {
+.bp-res p {
   margin-left: 10px;
   line-height: 3em;
   color: white;
@@ -392,17 +392,17 @@ main .bp-res p {
   text-align: center;
 }
 
-main .bp-res:hover {
+.bp-res:hover {
   -webkit-transform: translateX(130px);
       -ms-transform: translateX(130px);
           transform: translateX(130px);
 }
 
-main .modal p {
+.modal p {
   font-size: 1em;
 }
 
-main .cercle {
+.cercle {
   background-color: white;
   padding: 5px;
   border-radius: 50%;
@@ -414,19 +414,19 @@ main .cercle {
   top: 6px;
 }
 
-main .twitter {
+.twitter {
   background-color: #0EA4FC;
 }
 
-main .facebook {
+.facebook {
   background-color: #3E5F94;
 }
 
-main .drible {
+.drible {
   background-color: #F04888;
 }
 
-main .googleplus {
+.googleplus {
   background-color: #DD4831;
 }
 
